# qprocessor-script

./: .gitignore  README.md  qprocessor-script.cabal  stack.yaml
app/: Main.hs
src/Quantum/QProcessor/Script/: Diagram.hs  Interpreter.hs  Parser.hs  Syntax.hs
src/Quantum/QProcessor/Script/Internal/: ParserCombinators.hs
test/Quantum/QProcessor/Script/: DiagramSpec.hs  InterpreterSpec.hs  ParserSpec.hs
test/Quantum/QProcessor/Script/Internal/: ParserCombinatorsSpec.hs
