name:                qprocessor-script
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Quantum.QProcessor.Script.Interpreter
                     , Quantum.QProcessor.Script.Parser
                     , Quantum.QProcessor.Script.Syntax
                     , Quantum.QProcessor.Script.Internal.ParserCombinators
  build-depends:       base >= 4.7 && < 5
                     , qprocessor
                     , mtl
                     , containers
                     , interpolatedstring-perl6
                     , parsec == 3.*
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  default-language:    Haskell2010

test-suite qprocessor-script-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Quantum.QProcessor.Script.InterpreterSpec
                     , Quantum.QProcessor.Script.ParserSpec
                     , Quantum.QProcessor.Script.Internal.ParserCombinatorsSpec
  build-depends:       base >= 4.7 && < 5
                     , hspec == 2.*
                     , hspec-expectations
                     , qprocessor
                     , qprocessor-script
                     , interpolatedstring-perl6
                     , mtl
                     , parsec == 3.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

executable qprocessor-script-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  build-depends:       base
                     , qprocessor
                     , qprocessor-script
                     , parsec == 3.*
 default-language:     Haskell2010
